fix: Ensure DBML editor is scrollable and not cut off at the bottom

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,13 +27,31 @@ body {
   border: 2px solid #fdfdfd;
 }
 /* Custom Prism/Editor styles */
-.dbml-editor pre {
-  margin: 0 !important;
-  background: transparent !important;
+.dbml-editor {
+  min-height: 100%;
 }
 
-.dbml-editor textarea {
-  outline: none !important;
+.dbml-editor textarea, 
+.dbml-editor pre {
+  min-height: 100% !important;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: #e2e8f0;
+  border-radius: 10px;
+  border: 3px solid white;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #cbd5e1;
 }
 
 .token.keyword {
